@@ -16,12 +16,9 @@ import org.springframework.transaction.annotation.Transactional;
 import org.springframework.util.MultiValueMap;
 import org.springframework.web.multipart.MultipartFile;
 
+import java.time.LocalDate;
 import java.time.LocalDateTime;
-import java.util.ArrayList;
-import java.util.HashMap;
-import java.util.List;
-import java.util.Map;
-import java.util.Set;
+import java.util.*;
 
 @Service
 @RequiredArgsConstructor
@@ -39,12 +36,31 @@ public class RecruitmentService implements RecruitmentServiceInterface {
     private final RecruitmentMapper recruitmentMapper;
     private final RecruitmentApplicationMapper recruitmentApplicationMapper;
     private final CloudinaryService cloudinaryService;
+    private final ClubMemberShipRepository clubMemberShipRepository;
+    private final RoleMemberShipRepository roleMembershipRepository;
+    private final SemesterRepository semesterRepository;
 
     @Override
     public PagedResponse<RecruitmentData> listRecruitments(Long clubId, RecruitmentStatus status, Pageable pageable) {
-        Page<Recruitment> page = (status == null)
-                ? recruitmentRepository.findByClub_Id(clubId, pageable)
-                : recruitmentRepository.findByClub_IdAndStatus(clubId, status, pageable);
+        return listRecruitments(clubId, status, null, pageable);
+    }
+    
+    public PagedResponse<RecruitmentData> listRecruitments(Long clubId, RecruitmentStatus status, String keyword, Pageable pageable) {
+        Page<Recruitment> page;
+        
+        // If keyword is provided, use search query
+        if (keyword != null && !keyword.trim().isEmpty()) {
+            String trimmedKeyword = keyword.trim();
+            page = (status == null)
+                    ? recruitmentRepository.searchByClubIdAndKeyword(clubId, trimmedKeyword, pageable)
+                    : recruitmentRepository.searchByClubIdAndStatusAndKeyword(clubId, status, trimmedKeyword, pageable);
+        } else {
+            // Otherwise use normal query
+            page = (status == null)
+                    ? recruitmentRepository.findByClub_Id(clubId, pageable)
+                    : recruitmentRepository.findByClub_IdAndStatus(clubId, status, pageable);
+        }
+        
         Page<RecruitmentData> dataPage = page.map(recruitmentMapper::toDto);
         return PagedResponse.of(dataPage);
     }
@@ -60,23 +76,32 @@ public class RecruitmentService implements RecruitmentServiceInterface {
         // Load options for each question
         for (RecruitmentFormQuestion question : questions) {
             List<QuestionOption> options = questionOptionRepository.findByQuestion_IdOrderByOptionOrderAsc(question.getId());
-            question.setOptions(options.stream().collect(java.util.stream.Collectors.toSet()));
+            question.setOptions(new HashSet<>(options));
         }
         
-        r.setFormQuestions(questions.stream().collect(java.util.stream.Collectors.toSet()));
+        r.setFormQuestions(new HashSet<>(questions));
         
         // Load team options
         List<TeamOption> teamOptions = teamOptionRepository.findByRecruitment_Id(r.getId());
-        r.setTeamOptions(teamOptions.stream().collect(java.util.stream.Collectors.toSet()));
+        r.setTeamOptions(new HashSet<>(teamOptions));
         
         return recruitmentMapper.toDto(r);
     }
 
     @Override
     @Transactional
-    public RecruitmentData createRecruitment(Long clubId, RecruitmentCreateRequest req) {
+    public RecruitmentData createRecruitment(Long userId, Long clubId, RecruitmentCreateRequest req) throws AppException {
+        // Kiểm tra quyền: phải là CLUB_PRESIDENT và là thành viên của club
+        checkClubPresidentPermission(userId, clubId);
+        
         Recruitment r = recruitmentMapper.toEntity(req, clubId);
         r = recruitmentRepository.save(r);
+        
+        // Nếu recruitment mới có status là OPEN, đóng tất cả các recruitment OPEN khác của club
+        if (r.getStatus() == RecruitmentStatus.OPEN) {
+            closeOtherOpenRecruitments(clubId, r.getId());
+        }
+        
         upsertQuestions(r, req.questions);
         upsertTeamOptions(r, req.teamOptionIds);
         
@@ -84,22 +109,25 @@ public class RecruitmentService implements RecruitmentServiceInterface {
         // Load options for each question
         for (RecruitmentFormQuestion question : questions) {
             List<QuestionOption> options = questionOptionRepository.findByQuestion_IdOrderByOptionOrderAsc(question.getId());
-            question.setOptions(options.stream().collect(java.util.stream.Collectors.toSet()));
+            question.setOptions(new HashSet<>(options));
         }
-        r.setFormQuestions(questions.stream().collect(java.util.stream.Collectors.toSet()));
+        r.setFormQuestions(new HashSet<>(questions));
         
         // Load team options
         List<TeamOption> teamOptions = teamOptionRepository.findByRecruitment_Id(r.getId());
-        r.setTeamOptions(teamOptions.stream().collect(java.util.stream.Collectors.toSet()));
+        r.setTeamOptions(new HashSet<>(teamOptions));
         
         return recruitmentMapper.toDto(r);
     }
 
     @Override
     @Transactional
-    public RecruitmentData updateRecruitment(Long id, RecruitmentUpdateRequest req) throws AppException {
+    public RecruitmentData updateRecruitment(Long userId, Long id, RecruitmentUpdateRequest req) throws AppException {
         Recruitment r = recruitmentRepository.findById(id)
                 .orElseThrow(() -> new AppException(ErrorCode.INTERNAL_SERVER_ERROR));
+        
+        // Kiểm tra quyền: phải là CLUB_PRESIDENT và là thành viên của club
+        checkClubPresidentPermission(userId, r.getClub().getId());
         
         // Check if recruitment is closed
         if (r.getStatus() == RecruitmentStatus.CLOSED) {
@@ -107,6 +135,12 @@ public class RecruitmentService implements RecruitmentServiceInterface {
         }
         
         recruitmentMapper.updateEntity(r, req);
+        
+        // Nếu recruitment được cập nhật thành OPEN, đóng tất cả các recruitment OPEN khác của club
+        if (r.getStatus() == RecruitmentStatus.OPEN) {
+            closeOtherOpenRecruitments(r.getClub().getId(), r.getId());
+        }
+        
         recruitmentRepository.save(r);
         upsertQuestions(r, req.questions);
         upsertTeamOptions(r, req.teamOptionIds);
@@ -115,37 +149,84 @@ public class RecruitmentService implements RecruitmentServiceInterface {
         // Load options for each question
         for (RecruitmentFormQuestion question : questions) {
             List<QuestionOption> options = questionOptionRepository.findByQuestion_IdOrderByOptionOrderAsc(question.getId());
-            question.setOptions(options.stream().collect(java.util.stream.Collectors.toSet()));
+            question.setOptions(new HashSet<>(options));
         }
-        r.setFormQuestions(questions.stream().collect(java.util.stream.Collectors.toSet()));
+        r.setFormQuestions(new HashSet<>(questions));
         
         // Load team options
         List<TeamOption> teamOptions = teamOptionRepository.findByRecruitment_Id(r.getId());
-        r.setTeamOptions(teamOptions.stream().collect(java.util.stream.Collectors.toSet()));
+        r.setTeamOptions(new HashSet<>(teamOptions));
         
         return recruitmentMapper.toDto(r);
     }
 
     @Override
     @Transactional
-    public void changeRecruitmentStatus(Long id, RecruitmentStatus status) throws AppException {
+    public void changeRecruitmentStatus(Long userId, Long id, RecruitmentStatus status) throws AppException {
         Recruitment r = recruitmentRepository.findById(id)
                 .orElseThrow(() -> new AppException(ErrorCode.INTERNAL_SERVER_ERROR));
+        
+        // Kiểm tra quyền: phải là CLUB_PRESIDENT và là thành viên của club
+        checkClubPresidentPermission(userId, r.getClub().getId());
+        
+        // Nếu status mới là OPEN, đóng tất cả các recruitment OPEN khác của club
+        if (status == RecruitmentStatus.OPEN) {
+            closeOtherOpenRecruitments(r.getClub().getId(), r.getId());
+        }
+        
         r.setStatus(status);
         recruitmentRepository.save(r);
     }
 
     @Override
     @Transactional
-    public void deleteRecruitment(Long id) {
+    public void deleteRecruitment(Long userId, Long id) throws AppException {
+        Recruitment r = recruitmentRepository.findById(id)
+                .orElseThrow(() -> new AppException(ErrorCode.INTERNAL_SERVER_ERROR));
+        
+        // Kiểm tra quyền: phải là CLUB_PRESIDENT và là thành viên của club
+        checkClubPresidentPermission(userId, r.getClub().getId());
+        
         recruitmentRepository.deleteById(id);
     }
 
     @Override
-    public PagedResponse<RecruitmentApplicationData> listApplications(Long recruitmentId, RecruitmentApplicationStatus status, Pageable pageable) {
+    public PagedResponse<RecruitmentApplicationData> listApplications(Long userId, Long recruitmentId, RecruitmentApplicationStatus status, Pageable pageable) throws AppException {
+        return listApplications(userId, recruitmentId, status, null, pageable);
+    }
+    
+    public PagedResponse<RecruitmentApplicationData> listApplications(Long userId, Long recruitmentId, RecruitmentApplicationStatus status, String keyword, Pageable pageable) throws AppException {
+        // Lấy recruitment để xác định clubId
+        Recruitment recruitment = recruitmentRepository.findById(recruitmentId)
+                .orElseThrow(() -> new AppException(ErrorCode.INTERNAL_SERVER_ERROR));
+        
+        // Kiểm tra quyền: phải là CLUB_PRESIDENT và là thành viên của club
+        checkClubPresidentPermission(userId, recruitment.getClub().getId());
+        
+        Page<RecruitmentApplication> page;
+        
+        // If keyword is provided, use search query
+        if (keyword != null && !keyword.trim().isEmpty()) {
+            String trimmedKeyword = keyword.trim();
+            page = (status == null)
+                    ? applicationRepository.searchByRecruitmentIdAndKeyword(recruitmentId, trimmedKeyword, pageable)
+                    : applicationRepository.searchByRecruitmentIdAndStatusAndKeyword(recruitmentId, status, trimmedKeyword, pageable);
+        } else {
+            // Otherwise use normal query
+            page = (status == null)
+                    ? applicationRepository.findByRecruitment_Id(recruitmentId, pageable)
+                    : applicationRepository.findByRecruitment_IdAndStatus(recruitmentId, status, pageable);
+        }
+        
+        Page<RecruitmentApplicationData> dataPage = page.map(recruitmentApplicationMapper::toDto);
+        return PagedResponse.of(dataPage);
+    }
+
+    @Override
+    public PagedResponse<RecruitmentApplicationData> listMyApplications(Long applicantId, RecruitmentApplicationStatus status, Pageable pageable) {
         Page<RecruitmentApplication> page = (status == null)
-                ? applicationRepository.findByRecruitment_Id(recruitmentId, pageable)
-                : applicationRepository.findByRecruitment_IdAndStatus(recruitmentId, status, pageable);
+                ? applicationRepository.findByApplicant_Id(applicantId, pageable)
+                : applicationRepository.findByApplicant_IdAndStatus(applicantId, status, pageable);
         Page<RecruitmentApplicationData> dataPage = page.map(recruitmentApplicationMapper::toDto);
         return PagedResponse.of(dataPage);
     }
@@ -170,6 +251,45 @@ public class RecruitmentService implements RecruitmentServiceInterface {
                 .orElseThrow(() -> new AppException(ErrorCode.INTERNAL_SERVER_ERROR));
         User applicant = userRepository.findById(applicantId)
                 .orElseThrow(() -> new AppException(ErrorCode.UNAUTHORIZED));
+
+        // Kiểm tra xem user đã là thành viên active của club chưa
+        Long clubId = recruitment.getClub().getId();
+        boolean isAlreadyMember = clubMemberShipRepository.existsByUserIdAndClubIdAndStatus(
+                applicantId, clubId, ClubMemberShipStatus.ACTIVE);
+        if (isAlreadyMember) {
+            throw new AppException(ErrorCode.ALREADY_CLUB_MEMBER);
+        }
+
+        // Kiểm tra nếu user đã nộp đơn ứng tuyển cho đợt này thì không cho nộp nữa
+        if (applicationRepository.findByApplicant_IdAndRecruitment_Id(applicantId, recruitment.getId()).isPresent()) {
+            throw new AppException(ErrorCode.ALREADY_APPLIED);
+        }
+
+        // Validate required questions are answered
+        List<RecruitmentFormQuestion> questions = questionRepository.findByRecruitment_IdOrderByQuestionOrderAsc(recruitment.getId());
+        for (RecruitmentFormQuestion question : questions) {
+            if (question.getIsRequired() != null && question.getIsRequired() == 1) {
+                boolean isAnswered = req.answers.stream()
+                        .anyMatch(ans -> ans.questionId.equals(question.getId()) && 
+                                       (ans.answerText != null && !ans.answerText.trim().isEmpty() || 
+                                        ans.fileUrl != null && !ans.fileUrl.trim().isEmpty()));
+                
+                // Check if file is uploaded for this question
+                if (!isAnswered && allFiles != null) {
+                    String fileKey = "file_" + question.getId();
+                    if (allFiles.containsKey(fileKey)) {
+                        List<MultipartFile> files = allFiles.get(fileKey);
+                        if (files != null && !files.isEmpty() && files.getFirst() != null && !files.getFirst().isEmpty()) {
+                            isAnswered = true;
+                        }
+                    }
+                }
+                
+                if (!isAnswered) {
+                    throw new AppException(ErrorCode.INTERNAL_SERVER_ERROR);
+                }
+            }
+        }
 
         RecruitmentApplication app = RecruitmentApplication.builder()
                 .recruitment(recruitment)
@@ -198,7 +318,7 @@ public class RecruitmentService implements RecruitmentServiceInterface {
                     List<MultipartFile> files = entry.getValue();
                     
                     if (files != null && !files.isEmpty()) {
-                        MultipartFile file = files.get(0); // Take first file
+                        MultipartFile file = files.getFirst(); // Take first file
                         if (file != null && !file.isEmpty()) {
                             // Upload to Cloudinary
                             CloudinaryService.UploadResult uploadResult = cloudinaryService.uploadFile(file);
@@ -233,30 +353,121 @@ public class RecruitmentService implements RecruitmentServiceInterface {
         }
         answerRepository.saveAll(answers);
 
-        return getApplication(app.getId());
+        return getApplicationInternal(app.getId());
     }
 
     @Override
-    public RecruitmentApplicationData getApplication(Long applicationId) throws AppException {
+    public RecruitmentApplicationData getApplication(Long userId, Long applicationId) throws AppException {
         RecruitmentApplication app = applicationRepository.findById(applicationId)
                 .orElseThrow(() -> new AppException(ErrorCode.INTERNAL_SERVER_ERROR));
         
+        // Kiểm tra quyền: phải là CLUB_PRESIDENT và là thành viên của club
+        Long clubId = app.getRecruitment().getClub().getId();
+        checkClubPresidentPermission(userId, clubId);
+        
         List<RecruitmentFormAnswer> answers = answerRepository.findByApplication_Id(applicationId);
-        app.setAnswers(answers.stream().collect(java.util.stream.Collectors.toSet()));
+        app.setAnswers(new HashSet<>(answers));
+        
+        return recruitmentApplicationMapper.toDto(app);
+    }
+
+    @Override
+    public RecruitmentApplicationData getMyApplication(Long applicantId, Long applicationId) throws AppException {
+        RecruitmentApplication app = applicationRepository.findById(applicationId)
+                .orElseThrow(() -> new AppException(ErrorCode.INTERNAL_SERVER_ERROR));
+        
+        // Kiểm tra: đơn ứng tuyển phải thuộc về applicant
+        if (!app.getApplicant().getId().equals(applicantId)) {
+            throw new AppException(ErrorCode.INSUFFICIENT_PERMISSIONS);
+        }
+        
+        List<RecruitmentFormAnswer> answers = answerRepository.findByApplication_Id(applicationId);
+        app.setAnswers(new HashSet<>(answers));
         
         return recruitmentApplicationMapper.toDto(app);
     }
 
     @Override
     @Transactional
-    public RecruitmentApplicationData reviewApplication(ApplicationReviewRequest req) throws AppException {
+    public RecruitmentApplicationData reviewApplication(Long userId, ApplicationReviewRequest req) throws AppException {
         RecruitmentApplication app = applicationRepository.findById(req.applicationId)
                 .orElseThrow(() -> new AppException(ErrorCode.INTERNAL_SERVER_ERROR));
+        
+        // Kiểm tra quyền: phải là CLUB_PRESIDENT và là thành viên của club
+        Long clubId = app.getRecruitment().getClub().getId();
+        checkClubPresidentPermission(userId, clubId);
+        
         app.setStatus(req.status);
         app.setReviewNotes(req.reviewNotes);
         app.setReviewedDate(LocalDateTime.now());
         applicationRepository.save(app);
-        return getApplication(app.getId());
+        
+        // Nếu status là ACCEPTED, thêm user vào phòng ban đã đăng ký
+        if (req.status == RecruitmentApplicationStatus.ACCEPTED && app.getTeamId() != null) {
+            addMemberToTeam(app);
+        }
+        
+        return getApplicationInternal(app.getId());
+    }
+    
+    /**
+     * Lấy thông tin application không kiểm tra quyền (dùng nội bộ)
+     */
+    private RecruitmentApplicationData getApplicationInternal(Long applicationId) throws AppException {
+        RecruitmentApplication app = applicationRepository.findById(applicationId)
+                .orElseThrow(() -> new AppException(ErrorCode.INTERNAL_SERVER_ERROR));
+        
+        List<RecruitmentFormAnswer> answers = answerRepository.findByApplication_Id(applicationId);
+        app.setAnswers(new HashSet<>(answers));
+        
+        return recruitmentApplicationMapper.toDto(app);
+    }
+    
+    /**
+     * Thêm member vào team sau khi đơn được chấp nhận
+     */
+    private void addMemberToTeam(RecruitmentApplication app) throws AppException {
+        Long applicantId = app.getApplicant().getId();
+        Long clubId = app.getRecruitment().getClub().getId();
+        Long teamId = app.getTeamId();
+        
+        // Kiểm tra xem user đã là thành viên của club chưa
+        ClubMemberShip clubMembership = clubMemberShipRepository
+                .findByUserIdAndClubIdAndStatus(applicantId, clubId, ClubMemberShipStatus.ACTIVE)
+                .orElse(null);
+        
+        // Nếu chưa là member, tạo ClubMemberShip mới
+        if (clubMembership == null) {
+            Club club = app.getRecruitment().getClub();
+            User applicant = app.getApplicant();
+            
+            clubMembership = ClubMemberShip.builder()
+                    .user(applicant)
+                    .club(club)
+                    .joinDate(LocalDate.now())
+                    .status(ClubMemberShipStatus.ACTIVE)
+                    .build();
+            clubMembership = clubMemberShipRepository.save(clubMembership);
+        }
+        
+        // Lấy current semester
+        Semester currentSemester = semesterRepository.findCurrentSemester()
+                .orElseThrow(() -> new AppException(ErrorCode.INTERNAL_SERVER_ERROR));
+        
+        // Lấy team
+        Team team = teamRepository.findById(teamId)
+                .orElseThrow(() -> new AppException(ErrorCode.INTERNAL_SERVER_ERROR));
+        
+        // Tạo RoleMemberShip để gán user vào team
+        // clubRole để null (member thông thường), có thể customize sau
+        RoleMemberShip roleMembership = RoleMemberShip.builder()
+                .clubMemberShip(clubMembership)
+                .team(team)
+                .clubRole(null) // Member thông thường không có role đặc biệt
+                .semester(currentSemester)
+                .isActive(true)
+                .build();
+        roleMembershipRepository.save(roleMembership);
     }
 
 
@@ -294,6 +505,7 @@ public class RecruitmentService implements RecruitmentServiceInterface {
                 entity.setQuestionText(q.questionText);
                 entity.setQuestionType(q.questionType);
                 entity.setQuestionOrder(q.questionOrder);
+                entity.setIsRequired(q.isRequired);
                 entity = questionRepository.save(entity);
                 
                 // Delete old options and create new ones
@@ -305,6 +517,7 @@ public class RecruitmentService implements RecruitmentServiceInterface {
                         .questionText(q.questionText)
                         .questionType(q.questionType)
                         .questionOrder(q.questionOrder)
+                        .isRequired(q.isRequired)
                         .recruitment(recruitment)
                         .build();
                 entity = questionRepository.save(entity);
@@ -365,6 +578,40 @@ public class RecruitmentService implements RecruitmentServiceInterface {
                         .build();
                 teamOptionRepository.save(teamOption);
             }
+        }
+    }
+
+    /**
+     * Đóng tất cả các recruitment có status OPEN khác của club (trừ recruitment hiện tại)
+     * để đảm bảo chỉ có một recruitment OPEN tại một thời điểm
+     */
+    private void closeOtherOpenRecruitments(Long clubId, Long currentRecruitmentId) {
+        List<Recruitment> openRecruitments = recruitmentRepository.findByClub_IdAndStatusAndIdNot(
+                clubId, RecruitmentStatus.OPEN, currentRecruitmentId
+        );
+        
+        for (Recruitment recruitment : openRecruitments) {
+            recruitment.setStatus(RecruitmentStatus.CLOSED);
+            recruitmentRepository.save(recruitment);
+        }
+    }
+
+    /**
+     * Kiểm tra xem user có quyền quản lý recruitment của club không
+     * Yêu cầu: phải là thành viên ACTIVE của club VÀ có club role là CLUB_PRESIDENT trong kỳ hiện tại
+     */
+    private void checkClubPresidentPermission(Long userId, Long clubId) throws AppException {
+        // Lấy semester hiện tại
+        Semester currentSemester = semesterRepository.findCurrentSemester()
+                .orElseThrow(() -> new AppException(ErrorCode.INTERNAL_SERVER_ERROR));
+        
+        // Kiểm tra xem user có phải là CLUB_PRESIDENT của club trong semester hiện tại không
+        boolean isClubPresident = clubMemberShipRepository.isClubPresidentInSemester(
+                userId, clubId, currentSemester.getId()
+        );
+        
+        if (!isClubPresident) {
+            throw new AppException(ErrorCode.INSUFFICIENT_PERMISSIONS);
         }
     }
 
